--- a/app/blueprints/main/main_templates/room.html
+++ b/app/blueprints/main/main_templates/room.html
@@ -1,5 +1,5 @@
-{%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block styles%}
-{%endblock%} {%block content%} {% with messages =
+{%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block style%}
+room.css {%endblock%} {%block content%} {% with messages =
 get_flashed_messages(with_categories=true) %} {% if messages %}
 <ul class="flashes">
   {% for category, message in messages %}
@@ -7,43 +7,34 @@ get_flashed_messages(with_categories=true) %} {% if messages %}
   {% endfor %}
 </ul>
 {% endif %} {% endwith %}
-<div class="message-box">
-  BOX
-  <div class="messages" id="messages"></div>
-  <div class="input">
-    <input
-      type="text"
-      rows="2"
-      name="message"
-      id="message"
-      placeholder="Type here!"
-    />
-    <button type="button" name="send" id="send-btn" onClick="sendMessage()">
-      Send
-    </button>
+<div class="room-box">
+  <h2 class="room-header">Room: {{room}}</h2>
+  <div class="message-box">
+    <div class="messages" id="messages"></div>
+    <div class="input">
+      <input
+        type="text"
+        rows="2"
+        name="message"
+        id="message"
+        placeholder="Type here!"
+      />
+      <button type="button" name="send" id="send-btn" onClick="sendMessage()">
+        Send
+      </button>
+    </div>
   </div>
 </div>
 
-<script type="text/javascript">
-  let socketio = io();
-
-  const messages = document.querySelector('#messages')
-
-  const createMessage = (name, msg) => {
-    const content = `
-    <div>
-        <span>
-            <strong>${name}</strong>: ${msg}
-        </span>
-        <span class="muted">
-                ${new Date().toLocaleString()}
-        </span>
-    </div>
-    `
-  }
-
-  const sendMessage = () => {
-    console.log('send');
-  };
+<script src="../static/js/room.js"></script>
+{%for msg in messages%}
+  {%if msg.type == 'message'%}
+<script>
+  createMessage("{{msg.username}}", "{{msg.message}}");
 </script>
-{%endblock%}
+  {%elif msg.type == 'status'%}
+  <script>
+    createStatus("{{msg.username}}", "{{msg.message}}");
+  </script>
+  {%endif%}
+{%endfor%} {%endblock%}
