--- a/app/blueprints/main/main_templates/room.html
+++ b/app/blueprints/main/main_templates/room.html
@@ -1,14 +1,7 @@
 {%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block style%}
-room.css {%endblock%} {%block content%} {% with messages =
-get_flashed_messages(with_categories=true) %} {% if messages %}
-<ul class="flashes">
-  {% for category, message in messages %}
-  <li class="{{ category }}">{{ message }}</li>
-  {% endfor %}
-</ul>
-{% endif %} {% endwith %}
+room.css {%endblock%} {%block content%}
 <div class="room-box">
-  <h2 class="room-header">Room: {{room}}</h2>
+  <h2 class="room-header">Room: {{session.location}}</h2>
   <div class="message-box">
     <div class="messages" id="messages"></div>
     <div class="input">
@@ -25,6 +18,7 @@ get_flashed_messages(with_categories=true) %} {% if messages %}
     </div>
   </div>
 </div>
+{%include './includes/flash.html'%}
 
 <script src="../static/js/room.js"></script>
 {%for msg in messages%}
