--- a/app/blueprints/main/main_templates/room.html
+++ b/app/blueprints/main/main_templates/room.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block style%}
 room.css {%endblock%} {%block content%}
 <div class="room-box">
-  <h2 class="room-header">Room: {{session.location}}</h2>
+  <h2 class="room-header">Narnia</h2>
   <div class="message-box">
     <div class="messages" id="messages"></div>
     <form class="input" id="input-form">
