--- a/app/blueprints/main/main_templates/room.html
+++ b/app/blueprints/main/main_templates/room.html
@@ -1,21 +1,23 @@
 {%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block style%}
 room.css {%endblock%} {%block content%}
-<div class="room-box">
-  <h2 class="room-header">Narnia</h2>
-  <div class="message-box">
-    <div class="messages" id="messages"></div>
-    <form class="input" id="input-form">
-      <input
-        type="text"
-        rows="2"
-        name="message"
-        id="message"
-        placeholder="Type here!"
-      />
-      <button id="send-btn">
-        Send
-      </button>
-    </form>
+<div class="papyrus-box">
+  <div class="room-box">
+    <h2 class="room-header">Narnia</h2>
+    <div class="message-box">
+      <div class="messages" id="messages"></div>
+      <form class="input" id="input-form">
+        <input
+          type="text"
+          rows="2"
+          name="message"
+          id="message"
+          placeholder="Type here!"
+        />
+        <button id="send-btn">
+          Send
+        </button>
+      </form>
+    </div>
   </div>
 </div>
 {%include './includes/flash.html'%}
