--- a/app/blueprints/main/main_templates/room.html
+++ b/app/blueprints/main/main_templates/room.html
@@ -1,6 +1,7 @@
 {%extends 'base.html'%} {%block title%} Chat Room {%endblock%} {%block style%}
 room.css {%endblock%} {%block content%}
 <div class="papyrus-box">
+  <div class="map-box" id="map-box"></div>
   <div class="room-box">
     <h2 class="room-header">Narnia</h2>
     <div class="message-box">
